<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_new_game"
        android:icon="@drawable/ic_action_new_game"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_game" />

    <item
        android:id="@+id/action_game_difficulty"
        android:actionLayout="@layout/action_game_difficulty"
        android:icon="@drawable/ic_action_game_difficulty"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_game_difficulty" />

    <item
        android:id="@+id/action_instructions"
        android:icon="@drawable/ic_action_instructions"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_game_instructions" />

    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_rate_app" />
    <item
        android:id="@+id/action_other_apps"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_other_apps" />

</menu>
