<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_padding">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/game_instructions"
            android:paddingBottom="@dimen/text_padding"
            android:src="@drawable/ic_instructions" />

        <TextView
            style="@style/instructions_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_instructions_objective" />

        <TextView
            style="@style/instructions_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_padding"
            android:text="@string/game_instructions_objective_message" />

        <TextView
            style="@style/instructions_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_instructions_control" />

        <TextView
            style="@style/instructions_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_instructions_control_message" />

    </LinearLayout>
</ScrollView>
